--- a/css/styles.css
+++ b/css/styles.css
@@ -469,9 +469,12 @@ h4.price {
 .newsletter-section {
   padding: 20px;
   text-align: center;
-  width: 100%;
+  width: 100%; /* Full width of the parent container */
   margin: 0;
   background-color: var(--primary-color);
+  max-width: 900px; /* Set a max-width similar to other sections */
+  margin-left: auto; /* Center the section */
+  margin-right: auto; /* Center the section */
 }
 
 .newsletter-container {
@@ -479,16 +482,17 @@ h4.price {
   flex-direction: column;
   align-items: center; /* Center children horizontally */
   justify-content: center; /* Center children vertically (if needed) */
-  max-width: 100%;
+  max-width: 100%; /* Full width of the newsletter-section */
   margin: 0;
   padding: 20px;
 }
 
-.form-fields {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 10px;
+.input-field {
+  padding: 10px;
+  width: 90%; /* Increase the width to make the input fields wider */
+  max-width: 400px;
+  border: 2px solid var(--tertiary-color);
+  border-radius: 20px;
 }
 
 .input-row {
@@ -505,7 +509,7 @@ h4.price {
 
 .input-field {
   padding: 10px;
-  width: 100%;
+  width: 90%; /* Increase the width to make the input fields wider */
   max-width: 400px;
   border: 2px solid var(--tertiary-color);
   border-radius: 20px;
@@ -566,6 +570,10 @@ h4.price {
   background-color: var(--tertiary-color);
 }
 
+@media (max-width: 768px) {
+  .newsletter-section p {
+    text-align: center;
+  }
 
 /* Footer Styles */
 .footer {
