--- a/css/styles.css
+++ b/css/styles.css
@@ -463,16 +463,12 @@ h4.price {
   }
 }
 
-
-
 /* Styles for the newsletter section */
 .newsletter-section {
   padding: 20px;
   text-align: center;
-  width: 100%; /* Full width of the parent container */
   margin: 0;
   background-color: var(--primary-color);
-  max-width: 900px; /* Set a max-width similar to other sections */
   margin-left: auto; /* Center the section */
   margin-right: auto; /* Center the section */
 }
@@ -482,7 +478,6 @@ h4.price {
   flex-direction: column;
   align-items: center; /* Center children horizontally */
   justify-content: center; /* Center children vertically (if needed) */
-  max-width: 100%; /* Full width of the newsletter-section */
   margin: 0;
   padding: 20px;
 }
@@ -539,6 +534,7 @@ h4.price {
   cursor: pointer;
   border-radius: 100px;
   text-decoration: none;
+  width: 200px;
 }
 
 .send-button:hover {
@@ -574,6 +570,8 @@ h4.price {
   .newsletter-section p {
     text-align: center;
   }
+}
+
 
 /* Footer Styles */
 .footer {
