--- a/css/styles.css
+++ b/css/styles.css
@@ -664,3 +664,93 @@ body:target ~ .back-to-top {
   }
 }
 
+/* Chatbot */
+.chatbot-container {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: var(--primary-color);
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  width: 300px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  max-height: 400px;
+}
+
+.chatbot-content {
+  overflow-y: auto;
+  padding: 10px;
+}
+
+.chatbot-messages {
+  min-height: 300px;
+}
+
+.chatbot-input {
+  border: none;
+  padding: 10px;
+  border-top: 1px solid #ddd;
+  width: calc(100% - 60px);
+}
+
+.chatbot-send-btn {
+  width: 60px;
+  border: none;
+  background-color: var(--tertiary-color);
+  color: var(--primary-color);
+}
+
+.chatbot-send-btn:hover {
+  background-color: var(--text-color);
+}
+
+.chatbot-toggle-btn {
+  position: fixed;
+  bottom: 80px; 
+  right: 20px; 
+  background-color: var(--tertiary-color);
+  color: var(--primary-color);
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  z-index: 1000; /* To ensure it's above other elements */
+  display: flex;
+  align-items: center;
+}
+
+.chatbot-icon {
+  width: 40px; 
+  height: 40px; 
+  margin-right: 5px; /* Space between icon and text */
+}
+
+.close-chatbot-btn {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.question-link {
+  color: var(--tertiary-color);
+  text-decoration: none;
+  padding-top: 5px;
+  cursor: pointer; /* Show a pointer cursor on hover */
+  margin-bottom: 20px; /* Add space below each link */
+}
+
+.question-link:hover {
+  color: var(--background-color);
+  text-decoration: none;
+  padding-top: 5px;
+  cursor: pointer; /* Show a pointer cursor on hover */
+  margin-bottom: 20px; /* Add space below each link */
+}
+
+
