fix: arrow span

--- a/css/styles.css
+++ b/css/styles.css
@@ -310,7 +310,7 @@ body {
   transform: rotate(180deg);
 }
 
-h3 i {
+span i {
   font-size: 24px; 
   color: var(--secondary-color);
   margin-right: 5px;
