--- a/css/styles.css
+++ b/css/styles.css
@@ -310,8 +310,8 @@ body {
   transform: rotate(180deg);
 }
 
-span i,
-h3 i {
+.accordion-label,
+{
   font-size: 24px; 
   color: var(--secondary-color);
   margin-right: 5px;
