--- a/css/styles.css
+++ b/css/styles.css
@@ -289,6 +289,7 @@ body {
   align-items: center;
   cursor: pointer;
   color: var(--primary-color);
+  font-size: 24px;
 }
 
 .accordion-content {
